# configs

./: .gitignore  .gitmodules  README.md  ansible.cfg  playbook.yml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  prompt.sh  root.bashrc
collections/: requirements.yml
group_vars/all/: aliases.yaml  bash.yaml  functions.yaml  ssh.yaml  tasks.yaml  user.yaml
group_vars/awx/: bash.yaml  ssh.yaml
group_vars/bastion/: bash.yaml  functions.yaml  options.yaml  ssh.yaml
group_vars/bastion_grnoc/: aliases.yaml  path.yaml  ssh.yaml
group_vars/bastion_nwave/: path.yaml
group_vars/bastion_scinet/: ssh.yaml
group_vars/globalnoc/: aliases.yaml  bash.yaml  functions.yaml  git.yaml
group_vars/puppet/: bash.yaml
host_vars/: laptop.yaml
host_vars/laptop/: aliases.yaml  bash.yaml  git.yaml  options.yaml  ssh.yaml  tmux.yaml
inventory/: config.yaml  generate.py  hosts.yaml  other.yaml
roles/bash/defaults/: main.yml
roles/bash/tasks/: main.yml
roles/bash/templates/: bash.bashrc  bash.profile  bash.profile.j2  bash_profile.sh.j2  bashrc.j2  bashrc.sh.j2
roles/cleanup/tasks/: main.yml
roles/gitconfig/tasks/: main.yml
roles/hyprland/defaults/: main.yml
roles/hyprland/files/: clamshell.sh
roles/hyprland/tasks/: main.yml
roles/hyprland/templates/: hypridle.sh  hyprland.conf  hyprland.conf.j2
roles/i3/defaults/: main.yml
roles/i3/files/: screenlayout.sh
roles/i3/tasks/: main.yml
roles/i3/templates/: xset-pm.sh.j2
roles/perltidy/tasks/: main.yml
vars/: empty.yaml  wsl.yaml
vars/jdratlif/: bastion_grnoc.yaml
(+116 files in other folders)
