[tool.poetry]
name = "home-dir-configs"
version = "1.0.0"
description = "Home directory config file automation"
authors = ["John Ratliff <jdratlif@globalnoc.iu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.11"

[tool.poetry.group.dev.dependencies]

# playbook running and linting
ansible-core = "<2.13"
ansible-lint = { version = "<6.13", markers = 'platform_system != "Windows"' }

# inventory generation
requests = "^2.31.0"
urllib3 = "<2.0.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
